--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,6 +1,10 @@
 <form>
 <div class="form-control">
     <label for='text'>Task</label>
-    <input type='text' name='text' id='text'>
+    <input type='text' name='text' id='text' placeholder="Add Task">
+</div>
+<div class="form-control">
+    <label for='day'>Day & Time</label>
+    <input type='text' name='day' id='day' placeholder="Add Day & Time">
 </div>
 </form>
